--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xpipe",
   "version": "1.0.0",
-  "description": "Use cross-platform IPC paths.",
+  "description": "Use cross-platform IPC paths in node.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
